Remove LDAP configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,25 +5,27 @@ spring.datasource.username = testdb
 spring.datasource.password = testdb
 spring.datasource.continueOnError = true
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.show-sql = false
 spring.jpa.properties.connection.pool_size = 5
 	
-# LDAP
-ldap.enabled = true
-ldap.urls= ldap://ldap.forumsys.com:389/
-ldap.base.dn= dc=example,dc=com
-ldap.username= cn=read-only-admin,dc=example,dc=com
-ldap.password= password
-ldap.user.dn.pattern = uid={0}
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/api-docs
+
+spring.mail.host=
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=Q
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # JWT
 jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
 jwt.token.header = Authorization
 jwt.token.prefix = Bearer
 jwt.token.type = JWT
-jwt.token.issuer = sparkyservice-api
-jwt.token.audience = sparkyservice-app
+jwt.token.issuer = drk-api
+jwt.token.audience = drk-app
 
 # inMemory
 recovery.enabled = true
