--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,10 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+		</dependency>
 
 		<!-- TEST DEPENDENCIES -->
 		<dependency>
