--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,10 +12,10 @@ spring.jpa.properties.connection.pool_size = 5
 #springdoc.swagger-ui.path=/swagger-ui.html
 #springdoc.api-docs.path=/api-docs
 
-spring.mail.host=
+spring.mail.host=smtp.1und1.de
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=Q
+spring.mail.username=""
+spring.mail.password=""
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -28,6 +28,6 @@ jwt.token.issuer = drk-api
 jwt.token.audience = drk-app
 
 # inMemory
-recovery.enabled = true
+recovery.enabled = false
 recovery.password = abcdefgh
 recovery.user = user
